fixed text wrap in title

--- a/style/popup.scss
+++ b/style/popup.scss
@@ -188,6 +188,10 @@ body {
         font-size: 12px;
         color: $font-color;
         font-weight: 700;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 1px;
     }
 
     &.on {
